<resources>
    <string name="_l">L</string>
    <string name="_lp">L+P</string>
    <string name="_p">P</string>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="account_icon">Foto Profil</string>
    <string name="action_allow">Izinkan</string>
    <string name="action_already">Sudah</string>
    <string name="action_cancel">Batal</string>
    <string name="action_change_tps">Ganti TPS</string>
    <string name="action_check_false">Salah</string>
    <string name="action_check_true">Benar</string>
    <string name="action_close">Tutup</string>
    <string name="action_continue_check">Lanjut Periksa</string>
    <string name="action_continue_verify">Lanjutkan Periksa</string>
    <string name="action_copy_kode_tps">action_copy_kode_tps</string>
    <string name="action_copy_url">Salin URL Salinan C.Hasil</string>
    <string name="action_create_pdf">Kunci &amp; Buat Dokumen</string>
    <string name="action_delete_image">Hapus Gambar</string>
    <string name="action_delete_photo">Hapus Foto</string>
    <string name="action_detail">Detail</string>
    <string name="action_detail_election">Lihat Detail Pemilihan</string>
    <string name="action_finish">Selesai</string>
    <string name="action_get_url">Dapatkan Salinan C.Hasil</string>
    <string name="action_login">Masuk</string>
    <string name="action_logout">Logout</string>
    <string name="action_manage_witness">Kelola PPS, Saksi, &amp; Panwas</string>
    <string name="action_move_down">Pindah ke bawah</string>
    <string name="action_move_up">Pindah ke atas</string>
    <string name="action_next">Berikutnya</string>
    <string name="action_no">Tidak</string>
    <string name="action_not_yet">Belum</string>
    <string name="action_ok">OK</string>
    <string name="action_prev">Sebelumnya</string>
    <string name="action_recheck">Ulangi Periksa</string>
    <string name="action_register">Daftar</string>
    <string name="action_register_witness">Tambah PPS/Saksi/Panwas</string>
    <string name="action_retake_photo">Ulang Foto</string>
    <string name="action_retry">Ulangi</string>
    <string name="action_save">Simpan</string>
    <string name="action_see_image_history">Lihat Riwayat Gambar</string>
    <string name="action_send">Kirim</string>
    <string name="action_share_zip">Bagikan Berkas (PDF)</string>
    <string name="action_start_check">Mulai Periksa</string>
    <string name="action_submit">Submit</string>
    <string name="action_sync_witness">Kirim Data PPS/Saksi/Panwas</string>
    <string name="action_tps_detail">action_tps_detail</string>
    <string name="action_yes">Ya</string>
    <string name="administrasi_pemilih_disabilitas">Jumlah seluruh Pemilih disabilitas yang menggunakan hak pilih</string>
    <string name="administrasi_pemilih_dpt">Jumlah Pemilih dalam DPT (Model A-Kabko Daftar Pemilih)</string>
    <string name="administrasi_pemilih_dpt_ln">Jumlah Pemilih dalam Daftar Pemilih Tetap Luar Negeri (DPTLN) (Terdapat dalam Model A-Daftar Pemilih PPLN)</string>
    <string name="administrasi_pemilih_dpt_lnpos">Jumlah Pemilih dalam DPTLN-POS (Model A-Daftar Pemilih PPLN)</string>
    <string name="administrasi_pemilih_dpt_ppwp_dn">Jumlah Pemilih dalam Daftar Pemilih Tetap (DPT) ( Terdapat dalam Model A-Kabko Daftar Pemilih )</string>
    <string name="administrasi_pengguna_dpk">Jumlah Pemilih tidak terdaftar dalam DPT yang menggunakan hak pilih dengan KTP elektronik atau surat keterangan (DPK)</string>
    <string name="administrasi_pengguna_dpk_ln">Jumlah Pemilih tidak terdaftar dalam DPT / DPTLN yang menggunakan hak pilih dengan KTP elektronik atau surat keterangan (DPKLN)</string>
    <string name="administrasi_pengguna_dpt">Jumlah pengguna hak pilih dalam Daftar Pemilih Tetap (DPT)</string>
    <string name="administrasi_pengguna_dpt_ln">Jumlah pengguna hak pilih dalam Daftar Pemilih Tetap Luar Negeri (DPTLN)</string>
    <string name="administrasi_pengguna_dptb">Jumlah Pemilih yang Pindah Memilih (DPTb) yang menggunakan hak pilihnya</string>
    <string name="administrasi_pengguna_dptb_ln">Jumlah Pemilih yang Pindah Memilih (DPTbLN) yang menggunakan hak pilihnya</string>
    <string name="administrasi_pengguna_dptb_ppwp_dn">Jumlah pengguna hak pilih dalam Daftar Pemilih Tambahan (DPTb)</string>
    <string name="administrasi_pengguna_total">Jumlah Pengguna Hak Pilih (B.1 + B.2 + B.3)</string>
    <string name="administrasi_pengguna_total_lnpos">Jumlah Pengguna Hak Pilih (B.1 + B.2)</string>
    <string name="administrasi_surat_digunakan">Jumlah surat suara yang digunakan</string>
    <string name="administrasi_surat_dikembalikan">Jumlah surat suara yang dikembalikan oleh pemilik karena rusak</string>
    <string name="administrasi_surat_diterima">Jumlah surat suara yang diterima, termasuk surat suara cadangan 2% dari DPT ( 2 + 3 + 4 )</string>
    <string name="administrasi_surat_diterima_ln">Jumlah surat suara yang diterima, termasuk surat suara cadangan 2% dari DPTLN ( 2 + 3 + 4 )</string>
    <string name="administrasi_surat_kembali_ppln">b. Surat suara kembali ke PPLN (return to sender)</string>
    <string name="administrasi_surat_tidak_digunakan">Jumlah surat suara yang tidak digunakan/tidak terpakai, termasuk sisa surat suara cadangan</string>
    <string name="administrasi_surat_tidak_digunakan_lnpos">Jumlah surat suara yang tidak digunakan/tidak terpakai, termasuk sisa surat suara cadangan ( 3a + 3.b + 3.c )</string>
    <string name="administrasi_surat_tidak_dikembalikan">a. Surat suara tidak dikembalikan oleh Pemilih</string>
    <string name="administrasi_surat_tidak_terpakai">c. Surat suara tidak terpakai, termasuk sisa surat suara cadangan</string>
    <string name="amount">Jumlah</string>
    <string name="androidx_startup">androidx.startup</string>
    <string name="app_logo">Logo SiRekap Pemilu</string>
    <string name="app_name">siRekap Pemilu</string>
    <string name="app_name_real">siRekap Pemilu</string>
    <string name="appbar_scrolling_view_behavior">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="april_tag_duplicate_error">%1s halaman %2d sudah mencapai batas pengambilan gambar. Klik OK untuk melihat detail pemilihan</string>
    <string name="april_tag_not_registered_error">Formulir pemilihan tidak terdaftar</string>
    <string name="april_tag_page_number_error">Halaman %1d formulir %2s tidak valid</string>
    <string name="attendance_add_instruction">Tekan tombol \'+\' untuk menambahkan Foto Halaman Daftar Hadir Baru</string>
    <string name="attendance_empty_notice">Belum ada Halaman Daftar Hadir Ditambahkan</string>
    <string name="automatic">Auto</string>
    <string name="bottom_sheet_behavior">com.google.android.material.bottomsheet.BottomSheetBehavior</string>
    <string name="bottomsheet_action_collapse">Collapse the bottom sheet</string>
    <string name="bottomsheet_action_expand">Expand the bottom sheet</string>
    <string name="bottomsheet_action_expand_halfway">Expand halfway</string>
    <string name="bottomsheet_drag_handle_clicked">Drag handle double-tapped</string>
    <string name="bottomsheet_drag_handle_content_description">Drag handle</string>
    <string name="call_notification_answer_action">Answer</string>
    <string name="call_notification_answer_video_action">Video</string>
    <string name="call_notification_decline_action">Decline</string>
    <string name="call_notification_hang_up_action">Hang Up</string>
    <string name="call_notification_incoming_text">Incoming call</string>
    <string name="call_notification_ongoing_text">Ongoing call</string>
    <string name="call_notification_screening_text">Screening an incoming call</string>
    <string name="candidate_num">Jumlah Paslon</string>
    <string name="capture_form">Foto Formulir</string>
    <string name="captured">Terfoto</string>
    <string name="create_pdf_in_progress">Sedang membuat dokumen. Harap tunggu sampai selesai.</string>
    <string name="create_pdf_instruction_special_occurrence">Tekan tombol di bawah ini untuk mengunci data tanda terima salinan saksi dan kejadian khusus di TPS ini.</string>
    <string name="download_zip_information">Dokumen Pemilihan</string>
    <string name="dpd">Pileg DPD</string>
    <string name="dpr">Pileg DPR</string>
    <string name="dprdk">Pileg DPRDK</string>
    <string name="dprdp">Pileg DPRDP</string>
    <string name="filter_pemilihan">Filter Pemilihan</string>
    <string name="form_c_image">Gambar Form C</string>
    <string name="help_icon">Ikon bantuan</string>
    <string name="message_helper_verify_photo_attendees">Apakah gambar di atas sudah berkualitas baik? Pastikan gambar asli menampilkan dengan jelas seluruh bagian dari lembaran kertas yang difoto. Jika gambar belum baik, tekan \'Ulangi Foto\'.</string>
    <string name="pilgub">Pilgub</string>
    <string name="pilpres">Pilpres</string>
    <string name="pilwabup">Pilwalkot/Pilbup</string>
    <string name="prompt_comment">Catatan</string>
    <string name="submit_data_correctness_confirmation">Saya menyatakan bahwa data yang saya isikan adalah benar</string>
    <string name="upload_pdf">Unggah Berkas (PDF)</string>
    <string name="upload_pdf_instruction_special_occurrence">Tekan tombol di bawah ini untuk mengunggah berkas (PDF) tanda terima salinan saksi dan kejadian khusus.</string>
    <string name="uploading_pdf">Sedang mengunggah dokumen. Harap tunggu sampai selesai.</string>
    <string name="witness_empty_subtitle">Tekan tombol \'+\' untuk menambahkan PPS/saksi/panwas baru</string>
    <string name="witness_empty_subtitle_filter">Pilih jenis pemilihan di Filter Pemilihan untuk melihat PPS/saksi/panwas</string>
    <string name="witness_empty_subtitle_share_url">Belum ada saksi ditambahkan</string>
    <string name="witness_empty_title">Belum ada PPS/saksi/panwas</string>
    <string name="witness_qr_code_unzipped_warning">Anda harus mengunci pemilihan dan mengunggah Salinan Form C.Hasil sebelum dapat membagikan URL dan QR Code Salinan Form C.Hasil untuk PPS/saksi/panwas ini</string>
    <string name="zoom_in_icon">Ikon Zoom-In</string>
</resources>