<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" android:orientation="vertical" android:tag="layout/view_lock_special_occurrence_0" android:layout_width="match_parent" android:layout_height="wrap_content">
    <TextView android:textStyle="bold" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="8dp" android:text="@string/download_zip_information" style="@style/TextAppearance.MaterialComponents.Caption"/>
    <com.google.android.material.card.MaterialCardView android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="4dp" android:layout_marginBottom="8dp">
        <LinearLayout android:orientation="vertical" android:padding="16dp" android:layout_width="match_parent" android:layout_height="wrap_content">
            <TextView android:gravity="center" android:tag="binding_1" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="16dp" android:text="@string/create_pdf_instruction_special_occurrence" style="@style/TextAppearance.MaterialComponents.Body2"/>
            <Button android:layout_gravity="center" android:id="@+id/button_create_pdf" android:tag="binding_2" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/action_create_pdf" app:icon="@drawable/ic_baseline_vpn_key_24" style="@style/Widget.MaterialComponents.Button.UnelevatedButton"/>
            <com.google.android.material.progressindicator.CircularProgressIndicator android:layout_gravity="center" android:tag="binding_3" android:layout_width="wrap_content" android:layout_height="wrap_content" android:indeterminate="true" android:layout_marginStart="8dp"/>
            <TextView android:textColor="@color/colorPrimaryDark" android:gravity="center" android:layout_gravity="center" android:tag="binding_4" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="8dp" android:text="@string/create_pdf_in_progress" android:layout_marginStart="@dimen/activity_horizontal_margin" android:layout_marginEnd="@dimen/activity_horizontal_margin" style="@style/TextAppearance.MaterialComponents.Caption"/>
            <TextView android:gravity="center" android:tag="binding_5" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="16dp" android:text="@string/upload_pdf_instruction_special_occurrence" style="@style/TextAppearance.MaterialComponents.Body2"/>
            <Button android:layout_gravity="center" android:id="@+id/button_upload_pdf" android:tag="binding_6" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/upload_pdf" app:icon="@drawable/ic_baseline_cloud_upload_24" style="@style/Widget.MaterialComponents.Button.UnelevatedButton"/>
            <com.google.android.material.progressindicator.CircularProgressIndicator android:layout_gravity="center" android:tag="binding_7" android:layout_width="wrap_content" android:layout_height="wrap_content" android:indeterminate="true" android:layout_marginStart="8dp"/>
            <TextView android:textColor="@color/colorPrimaryDark" android:gravity="center" android:layout_gravity="center" android:tag="binding_8" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="8dp" android:text="@string/uploading_pdf" android:layout_marginStart="@dimen/activity_horizontal_margin" android:layout_marginEnd="@dimen/activity_horizontal_margin" style="@style/TextAppearance.MaterialComponents.Caption"/>
            <TextView android:textColor="@color/colorSuccess" android:gravity="center" android:layout_gravity="center" android:tag="binding_9" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="8dp" android:layout_marginStart="@dimen/activity_horizontal_margin" android:layout_marginEnd="@dimen/activity_horizontal_margin" style="@style/TextAppearance.MaterialComponents.Caption"/>
            <Button android:id="@+id/button_upload_pdf_offline" android:tag="binding_10" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="8dp" android:text="@string/upload_pdf" app:icon="@drawable/ic_baseline_cloud_upload_24" style="@style/MyOutlinedButton"/>
            <Button android:layout_gravity="center" android:id="@+id/button_share_zip" android:tag="binding_11" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/action_share_zip" app:icon="@drawable/ic_baseline_share_24" style="@style/Widget.MaterialComponents.Button.UnelevatedButton"/>
        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>
</LinearLayout>
