<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" android:tag="layout/fragment_witness_urls_0" android:layout_width="match_parent" android:layout_height="match_parent">
    <androidx.constraintlayout.widget.ConstraintLayout android:tag="binding_1" android:layout_width="match_parent" android:layout_height="match_parent">
        <com.google.android.material.progressindicator.CircularProgressIndicator android:layout_width="wrap_content" android:layout_height="wrap_content" android:indeterminate="true" app:layout_constraintBottom_toBottomOf="0" app:layout_constraintEnd_toEndOf="0" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toTopOf="0" style="@style/Widget.MaterialComponents.CircularProgressIndicator"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
    <androidx.constraintlayout.widget.ConstraintLayout android:tag="binding_2" android:layout_width="match_parent" android:layout_height="match_parent">
        <TextView android:gravity="center" android:layout_gravity="center" android:id="@+id/text_witness_empty_title" android:layout_width="0dp" android:layout_height="wrap_content" android:text="@string/witness_empty_title" android:layout_marginStart="@dimen/activity_horizontal_margin" android:layout_marginEnd="@dimen/activity_horizontal_margin" app:layout_constraintBottom_toTopOf="@+id/textView" app:layout_constraintEnd_toEndOf="0" app:layout_constraintHorizontal_bias="0.5" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toTopOf="0" app:layout_constraintVertical_chainStyle="packed" style="@style/TextAppearance.MaterialComponents.Headline6"/>
        <TextView android:layout_gravity="center" android:id="@+id/textView" android:layout_width="0dp" android:layout_height="wrap_content" android:layout_marginTop="8dp" android:text="@string/witness_empty_subtitle" android:textAlignment="center" android:layout_marginStart="@dimen/activity_horizontal_margin" android:layout_marginEnd="@dimen/activity_horizontal_margin" app:layout_constraintBottom_toBottomOf="0" app:layout_constraintEnd_toEndOf="0" app:layout_constraintHorizontal_bias="0.5" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toBottomOf="@+id/text_witness_empty_title" app:layout_constraintVertical_chainStyle="packed" style="@style/TextAppearance.MaterialComponents.Body1"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
    <androidx.constraintlayout.widget.ConstraintLayout android:tag="binding_3" android:layout_width="match_parent" android:layout_height="match_parent" android:layout_marginTop="@dimen/activity_vertical_margin" android:layout_marginBottom="@dimen/activity_vertical_margin" android:layout_marginVertical="@dimen/activity_vertical_margin">
        <androidx.constraintlayout.widget.ConstraintLayout android:id="@+id/layout_filter_pemilihan" android:tag="binding_4" android:layout_width="match_parent" android:layout_height="wrap_content" app:layout_constraintEnd_toEndOf="0" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toTopOf="0">
            <TextView android:id="@+id/title_filter_pemilihan" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/filter_pemilihan" android:layout_marginStart="@dimen/activity_horizontal_margin" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toTopOf="0" style="@style/TextAppearance.MaterialComponents.Subtitle2"/>
            <HorizontalScrollView android:id="@+id/filter_pemilihan" android:layout_width="0dp" android:layout_height="wrap_content" android:layout_marginEnd="@dimen/activity_horizontal_margin" app:layout_constraintEnd_toEndOf="0" app:layout_constraintStart_toStartOf="@+id/title_filter_pemilihan" app:layout_constraintTop_toBottomOf="@+id/title_filter_pemilihan">
                <com.google.android.material.chip.ChipGroup android:layout_width="wrap_content" android:layout_height="wrap_content">
                    <com.google.android.material.chip.Chip android:id="@+id/chip_filter_pilpres" android:tag="binding_5" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/pilpres" style="@style/MyChip.Filter"/>
                    <com.google.android.material.chip.Chip android:id="@+id/chip_filter_dpr" android:tag="binding_6" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/dpr" style="@style/MyChip.Filter"/>
                    <com.google.android.material.chip.Chip android:id="@+id/chip_filter_dprdp" android:tag="binding_7" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/dprdp" style="@style/MyChip.Filter"/>
                    <com.google.android.material.chip.Chip android:id="@+id/chip_filter_dprdk" android:tag="binding_8" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/dprdk" style="@style/MyChip.Filter"/>
                    <com.google.android.material.chip.Chip android:id="@+id/chip_filter_dpd" android:tag="binding_9" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/dpd" style="@style/MyChip.Filter"/>
                    <com.google.android.material.chip.Chip android:id="@+id/chip_filter_pilgub" android:tag="binding_10" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/pilgub" style="@style/MyChip.Filter"/>
                    <com.google.android.material.chip.Chip android:id="@+id/chip_filter_pilwabup" android:tag="binding_11" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/pilwabup" style="@style/MyChip.Filter"/>
                </com.google.android.material.chip.ChipGroup>
            </HorizontalScrollView>
            <View android:id="@+id/saksi_divider" android:background="@color/colorGrey" android:layout_width="0dp" android:layout_height="1dp" app:layout_constraintEnd_toEndOf="0" app:layout_constraintHorizontal_bias="0.5" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toBottomOf="@+id/filter_pemilihan"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
        <com.google.android.material.card.MaterialCardView android:id="@+id/card_alert" android:tag="binding_12" android:layout_width="0dp" android:layout_height="wrap_content" android:layout_margin="@dimen/activity_vertical_margin" app:cardBackgroundColor="@color/colorInfo10" app:cardElevation="0dp" app:layout_constraintEnd_toEndOf="0" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toBottomOf="@+id/layout_filter_pemilihan">
            <LinearLayout android:orientation="horizontal" android:padding="16dp" android:layout_width="match_parent" android:layout_height="wrap_content" app:layout_constraintEnd_toEndOf="0" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toTopOf="0">
                <ImageView android:layout_width="wrap_content" android:layout_height="wrap_content" android:contentDescription="@string/help_icon" app:srcCompat="@drawable/ic_baseline_info_24" app:tint="@color/colorInfo60"/>
                <TextView android:textColor="@color/colorInfo60" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/witness_qr_code_unzipped_warning" android:layout_marginStart="16dp" style="@style/TextAppearance.MaterialComponents.Subtitle2"/>
            </LinearLayout>
        </com.google.android.material.card.MaterialCardView>
        <androidx.recyclerview.widget.RecyclerView android:id="@+id/list_witness" android:tag="binding_13" android:layout_width="0dp" android:layout_height="0dp" android:overScrollMode="never" app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" app:layout_constraintBottom_toBottomOf="0" app:layout_constraintEnd_toEndOf="0" app:layout_constraintHorizontal_bias="0.5" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toBottomOf="@+id/card_alert"/>
        <androidx.constraintlayout.widget.ConstraintLayout android:tag="binding_14" android:layout_width="match_parent" android:layout_height="match_parent">
            <TextView android:layout_gravity="center" android:tag="binding_15" android:layout_width="0dp" android:layout_height="wrap_content" android:text="@string/witness_empty_subtitle_filter" android:textAlignment="center" android:layout_marginStart="@dimen/activity_horizontal_margin" android:layout_marginEnd="@dimen/activity_horizontal_margin" app:layout_constraintBottom_toBottomOf="0" app:layout_constraintEnd_toEndOf="0" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toTopOf="0" style="@style/TextAppearance.MaterialComponents.Body1"/>
            <TextView android:gravity="center" android:layout_gravity="center" android:id="@+id/text_witness_empty_title2" android:tag="binding_16" android:layout_width="0dp" android:layout_height="wrap_content" android:text="@string/witness_empty_subtitle_share_url" android:layout_marginStart="@dimen/activity_horizontal_margin" android:layout_marginEnd="@dimen/activity_horizontal_margin" app:layout_constraintBottom_toBottomOf="0" app:layout_constraintEnd_toEndOf="0" app:layout_constraintHorizontal_bias="0.5" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toTopOf="0" app:layout_constraintVertical_chainStyle="packed" style="@style/TextAppearance.MaterialComponents.Headline6"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
