<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" android:orientation="horizontal" android:paddingTop="8dp" android:paddingBottom="8dp" android:layout_width="match_parent" android:layout_height="wrap_content" android:paddingStart="8dp" android:paddingEnd="8dp">
    <View android:layout_width="0dp" android:layout_height="0dp" android:layout_weight="9"/>
    <TextView android:textStyle="italic" android:layout_width="0dp" android:layout_height="wrap_content" android:text="@string/_l" android:layout_weight="2" android:textAlignment="textEnd" style="@style/TextAppearance.MaterialComponents.Body2"/>
    <TextView android:textStyle="italic" android:layout_width="0dp" android:layout_height="wrap_content" android:text="@string/_p" android:layout_weight="2" android:textAlignment="textEnd" style="@style/TextAppearance.MaterialComponents.Body2"/>
    <TextView android:textStyle="italic" android:layout_width="0dp" android:layout_height="wrap_content" android:text="@string/_lp" android:layout_weight="2" android:textAlignment="textEnd" style="@style/TextAppearance.MaterialComponents.Body2"/>
    <View android:layout_width="0dp" android:layout_height="0dp" android:layout_weight="1" android:layout_marginStart="8dp"/>
</LinearLayout>
