<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" android:tag="layout/dialog_verify_body_0" android:layout_width="match_parent" android:layout_height="match_parent">
    <LinearLayout android:orientation="vertical" android:layout_width="match_parent" android:layout_height="wrap_content">
        <com.google.android.material.textfield.TextInputLayout android:id="@+id/comment_container" android:tag="binding_1" android:layout_width="match_parent" android:layout_height="wrap_content" android:hint="@string/prompt_comment" android:layout_marginStart="24dp" android:layout_marginEnd="24dp">
            <com.google.android.material.textfield.TextInputEditText android:id="@+id/comment" android:tag="binding_2" android:layout_width="match_parent" android:layout_height="wrap_content" android:inputType="textMultiLine" android:imeOptions="actionDone"/>
        </com.google.android.material.textfield.TextInputLayout>
        <androidx.appcompat.widget.AppCompatCheckBox android:tag="binding_3" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="24dp" android:layout_marginRight="24dp" android:text="@string/submit_data_correctness_confirmation" android:layout_marginHorizontal="24dp"/>
        <LinearLayout android:orientation="horizontal" android:layout_width="match_parent" android:layout_height="wrap_content">
            <View android:layout_width="0dp" android:layout_height="match_parent" android:layout_weight="1"/>
            <Button android:id="@+id/submit_button" android:tag="binding_4" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="4dp" android:text="@string/action_submit" android:layout_marginEnd="24dp" style="@style/MyTextButton"/>
        </LinearLayout>
    </LinearLayout>
</ScrollView>
