<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" android:tag="layout/view_special_occurrence_ongoing_0" android:layout_width="match_parent" android:layout_height="match_parent">
    <ScrollView android:layout_width="match_parent" android:layout_height="match_parent">
        <androidx.constraintlayout.widget.ConstraintLayout android:paddingLeft="@dimen/activity_horizontal_margin" android:paddingTop="@dimen/activity_vertical_margin" android:paddingRight="@dimen/activity_horizontal_margin" android:paddingBottom="@dimen/activity_vertical_margin" android:layout_width="match_parent" android:layout_height="wrap_content" android:paddingHorizontal="@dimen/activity_horizontal_margin" android:paddingVertical="@dimen/activity_vertical_margin">
            <com.google.android.material.card.MaterialCardView android:layout_gravity="center" android:id="@+id/card_image" android:layout_width="0dp" android:layout_height="wrap_content" app:cardBackgroundColor="@color/colorGrey200" app:cardElevation="0dp" app:layout_constraintEnd_toEndOf="0" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toTopOf="0" app:strokeColor="@android:color/transparent">
                <androidx.constraintlayout.widget.ConstraintLayout android:layout_width="match_parent" android:layout_height="wrap_content">
                    <ImageView android:tag="binding_1" android:layout_width="wrap_content" android:layout_height="300dp" android:adjustViewBounds="true" android:contentDescription="@string/form_c_image" app:layout_constraintBottom_toBottomOf="0" app:layout_constraintEnd_toEndOf="0" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toTopOf="0"/>
                    <ImageView android:id="@+id/icon_container" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_margin="8dp" android:src="@drawable/zoom_icon_circle" android:contentDescription="@string/zoom_in_icon" app:layout_constraintBottom_toBottomOf="0" app:layout_constraintEnd_toEndOf="0"/>
                    <ImageView android:layout_width="28dp" android:layout_height="28dp" android:contentDescription="@string/zoom_in_icon" app:layout_constraintBottom_toBottomOf="@+id/icon_container" app:layout_constraintEnd_toEndOf="@+id/icon_container" app:layout_constraintStart_toStartOf="@+id/icon_container" app:layout_constraintTop_toTopOf="@+id/icon_container" app:srcCompat="@drawable/ic_baseline_zoom_in_24"/>
                </androidx.constraintlayout.widget.ConstraintLayout>
            </com.google.android.material.card.MaterialCardView>
            <com.google.android.material.card.MaterialCardView android:id="@+id/card_instruction" android:layout_width="0dp" android:layout_height="wrap_content" android:layout_marginTop="16dp" app:layout_constraintEnd_toEndOf="0" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toBottomOf="@+id/card_image">
                <androidx.constraintlayout.widget.ConstraintLayout android:padding="@dimen/card_padding" android:layout_width="match_parent" android:layout_height="match_parent">
                    <TextView android:layout_gravity="center" android:id="@+id/label_photo_instruction" android:layout_width="wrap_content" android:layout_height="0dp" android:layout_marginTop="16dp" android:text="@string/message_helper_verify_photo_attendees" android:textAlignment="center" app:layout_constraintEnd_toEndOf="0" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toTopOf="0" style="@style/TextAppearance.MaterialComponents.Body2"/>
                    <Button android:id="@+id/button_retake_photo" android:layout_width="0dp" android:layout_height="wrap_content" android:layout_marginTop="8dp" android:text="@string/action_retake_photo" app:layout_constraintEnd_toEndOf="0" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toBottomOf="@+id/label_photo_instruction" style="@style/MyOutlinedButton"/>
                </androidx.constraintlayout.widget.ConstraintLayout>
            </com.google.android.material.card.MaterialCardView>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
    <androidx.constraintlayout.widget.ConstraintLayout android:background="@android:color/white" android:paddingBottom="8dp" android:layout_width="match_parent" android:layout_height="wrap_content" app:layout_constraintBottom_toBottomOf="0">
        <View android:background="@color/colorGrey" android:layout_width="match_parent" android:layout_height="1dp" app:layout_constraintTop_toTopOf="0"/>
        <Button android:id="@+id/button_back" android:tag="binding_2" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/action_prev" android:layout_marginStart="8dp" app:icon="@drawable/ic_baseline_keyboard_arrow_left_24" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toTopOf="0" style="@style/MyTextButton"/>
        <Button android:id="@+id/button_next" android:tag="binding_3" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/action_next" android:layout_marginEnd="8dp" app:icon="@drawable/ic_baseline_keyboard_arrow_right_24" app:iconGravity="end" app:layout_constraintEnd_toEndOf="0" app:layout_constraintTop_toTopOf="0" style="@style/MyTextButton"/>
        <Button android:id="@+id/button_finish" android:tag="binding_4" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/action_send" app:layout_constraintEnd_toEndOf="0" app:layout_constraintTop_toTopOf="0" style="@style/MyTextButton"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
